# cllg

./: .gitignore  DEV.md  LICENSE  README.md  pyproject.toml
examples/: basic_session.py  capture_stdio.py  command_vs_events.py  command_vs_prints.py  git_metadata.py  json_mode.py  progress_demo.py  training_loop.py
scripts/: lint_cllg_prints.py
src/cllg/: __init__.py  core.py
tests/: test_core.py  test_examples_cli.py
