[project]
name = "cllg"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alive-progress>=3.3",
  "wurlitzer>=3.1.1",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
  "pytest>=9.0.3",
]
